test/functional/directory/gds/ts/gdssetup/lib/valid/sv_nodom4.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: sv_nodom4.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:36:50  marty
# 	Update copyright years
# 	[1996/03/10  19:39:35  marty]
#
# Revision 1.1.4.1  1995/12/11  16:52:15  root
# 	Submit
# 	[1995/12/11  16:37:45  root]
# 
# Revision 1.1.2.3  1994/09/01  12:25:29  keutel
# 	OT 11797
# 	[1994/08/31  16:59:11  keutel]
# 
# Revision 1.1.2.2  1994/08/19  13:57:00  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:33  marrek]
# 
# Revision 1.1.2.1  1994/06/21  14:34:04  marrek
# 	Change service controls.
# 	[1994/06/16  15:55:31  marrek]
# 
# 	Created in June 94 code submission.
# 	[1994/06/10  16:09:31  marrek]
# 
# $EndLog$
# 
# $RCSfile: sv_nodom4.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:36:50 $
# 
gdscp -c "x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa; \
	  x500obj delete /C=de/O=sni/OU=buba; \
	  x500obj delete /C=de/O=sni; \
	  x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m7; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa; \
	  x500obj delete /C=de/O=sni/OU=buba; \
	  x500obj delete /C=de/O=sni; \
	  x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m8; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=sni/OU=buba/CN=dsa; \
	  x500obj delete /C=de/O=sni/OU=buba; \
	  x500obj delete /C=de/O=sni; \
          x500obj bind -dirid 3 -cache; \
	  x500svc modify -preferadmfunctions TRUE -duacache TRUE -duafirst TRUE -usedsa FALSE -cacheclass RESIDENT -dontusecopy FALSE; \
	  x500obj delete 43.12.2.1107.1.3.4.8=DEFAULT-DSA; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m5"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
